Tue Jul 14 14:24:20 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/bczar/bczar.html:
          No need to update the spec file manually anymore

Tue Jul 14 14:13:20 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          ace/OS.h is now illegal to be used in CIAO

Tue Jul 14 13:31:20 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

         * include/makeinclude/platform_linux.GNU:
           SUSE Enterprise 10 also needs the gcc workaround

Tue Jul 14 13:15:20 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/make_release.py:
          Don't create bmake files anymore

        * rpmbuild/ace-tao-ciao.spec:
          Updated because gperf has now a shared library

Tue Jul 14 11:12:20 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * .:
        * apps/gperf/ChangeLog:
        * apps/gperf/src/Bool_Array.h:
        * apps/gperf/src/Bool_Array.cpp:
        * apps/gperf/src/Gen_Perf.h:
        * apps/gperf/src/Gen_Perf.cpp:
        * apps/gperf/src/Hash_Table.h:
        * apps/gperf/src/Hash_Table.cpp:
        * apps/gperf/src/Iterator.h:
        * apps/gperf/src/Iterator.cpp:
        * apps/gperf/src/Key_List.h:
        * apps/gperf/src/Key_List.cpp:
        * apps/gperf/src/List_Node.h:
        * apps/gperf/src/List_Node.cpp:
        * apps/gperf/src/Options.h:
        * apps/gperf/src/Options.cpp:
        * apps/gperf/src/Vectors.h:
        * apps/gperf/src/Vectors.cpp:
        * apps/gperf/src/Version.cpp:
        * apps/gperf/src/gperf.cpp:
        * apps/gperf/src/gperf.mpc:
        * bin/MakeProjectCreator/config/MPC.cfg:
        * bin/make_release.py:
        * contrib/minizip/minizip_export.h:
        * docs/bczar/bczar.html:
        * include/makeinclude/platform_linux.GNU:
        * include/makeinclude/platform_linux_icc.GNU:

          Merged in from dds_ports branch, changelog entries pasted
          after this entry.

        * bin/cut_cidlc.sh:
        * contrib/utility:
